--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li><a href="#por_que_elegirnos">¿Por qué elegirnos?</a></li>
           <li><a href="#propuesta_educativa">Propuesta Educativa</a></li>
           <li><a href="#ultimas_noticias">Últimas noticias</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
